<resources>
    <string name="app_name">ShoeStore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">username or e-mail</string>
    <string name="password">password</string>
    <string name="login_button">Login</string>
    <string name="create_text">If you have not account, please create it</string>
    <string name="create_account">Create Account</string>

    <!--Welcome Fragment-->
    <string name="welcome_fragment">Welcome to the Shoe Store</string>
    <string name="welcome_text"> Hi, this is Shoe Store App.
    \n\nHere you can buy a shoe, what you like.
    \n\nLet\'s go and choose it.
    \n\n
    </string>
    <string name="start">Let\'s Start shopping</string>
    <string name="back">Back</string>
    <string name="next">Next</string>


    <!--Instructions Fragment -->
    <string name="instruction">Instructions</string>
    <string name="instructionText"> In the next step you could
     \n\nchoose shoe, what you like!
     \n\nand, also you need to choose:
     \n\nColor, Shoe sizes, and Shoe Model</string>

    <string name="fabShoeList">Add</string>
    <string name="shoe_detail">Shoe details</string>
    <string name="shoe_detail_instr">Here, you need to add some descriptions about your shoe</string>
    <string name="shoe_name_title">Shoe Name</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_cancel">Cancel</string>
    <string name="shoe_save">SAVE</string>
    <string name="menu_loginFragment">Back to Login</string>

    <string name="quote_format">\"%s\"</string>

</resources>
