<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginFragment">
   <!-- <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.models.LoginViewModel" />
    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/signIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/avatarLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="@+id/signIn"
            app:layout_constraintTop_toBottomOf="@+id/signIn"
            app:srcCompat="@drawable/ic_avatar" />

        <EditText
            android:id="@+id/imgLogin"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:padding="8sp"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="@+id/signIn"
            app:layout_constraintStart_toEndOf="@+id/avatarLogin"
            app:layout_constraintTop_toBottomOf="@+id/signIn" />

        <ImageView
            android:id="@+id/imgPassword"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/login_button"
            app:layout_constraintEnd_toEndOf="@+id/avatarLogin"
            app:layout_constraintStart_toStartOf="@+id/avatarLogin"
            app:layout_constraintTop_toBottomOf="@+id/avatarLogin"
            app:srcCompat="@android:drawable/ic_lock_idle_lock"
            tools:srcCompat="@android:drawable/ic_lock_idle_lock" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8sp"
            android:textAlignment="textStart"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/imgLogin"
            app:layout_constraintStart_toEndOf="@+id/imgPassword"
            app:layout_constraintTop_toBottomOf="@+id/imgLogin" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_button"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/imgPassword"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/textCreateAccount"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="64dp"
            android:padding="8sp"
            android:text="@string/create_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/login"
            app:layout_constraintStart_toStartOf="@+id/login"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <Button
            android:id="@+id/createAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_account"
            app:layout_constraintEnd_toEndOf="@+id/textCreateAccount"
            app:layout_constraintStart_toStartOf="@+id/textCreateAccount"
            app:layout_constraintTop_toBottomOf="@+id/textCreateAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>