<?xml version="1.0" encoding="utf-8"?>

<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ShoeDetailFragment">

    <data>
        <variable
            name="shoeDetailViewModel"
            type="com.udacity.shoestore.models.ShoeDetailViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoeDetailTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_detail"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textShoeInstr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_detail_instr"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/shoeDetailTitle"
            app:layout_constraintStart_toStartOf="@+id/shoeDetailTitle"
            app:layout_constraintTop_toBottomOf="@+id/shoeDetailTitle" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_name_title"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/textShoeInstr"
            app:layout_constraintTop_toBottomOf="@+id/textShoeInstr" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Enter Shoe Name"
            android:text="@={shoeDetailViewModel.shoeName}"
            android:inputType="textLongMessage"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/textName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textName"
            app:layout_constraintTop_toBottomOf="@+id/textShoeInstr"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textCompany"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_company"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textName" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Enter Shoe Company"
            android:text="@={shoeDetailViewModel.shoeCompany}"
            android:inputType="textLongMessage"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/textCompany"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textCompany"
            app:layout_constraintTop_toBottomOf="@+id/editName" />

        <TextView
            android:id="@+id/textSize"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/shoe_size"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textCompany" />

        <EditText
            android:id="@+id/editSize"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="Enter Shoe Size"
            android:text="@={shoeDetailViewModel.shoeSize}"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/textCompany"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textSize"
            app:layout_constraintTop_toBottomOf="@+id/editCompany"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/shoe_description"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSize" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="Enter Description"
            android:text="@={shoeDetailViewModel.shoeDetail}"
            android:inputType="textLongMessage"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription" />

        <Button
            android:id="@+id/shoeDetailCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/shoe_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDescription"
            app:layout_constraintVertical_bias="0.552" />

        <Button
            android:id="@+id/shoeDetailSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"

            android:text="@string/shoe_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/shoeDetailCancel"
            app:layout_constraintTop_toBottomOf="@+id/editDescription"
            app:layout_constraintVertical_bias="0.542" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--android:onClick="@{() -> shoeDetailViewModel.onSaveDetail}"-->
    <!--android:text="@={shoeDetailViewModel.shoeSize}"-->
</layout>